# oxiscale

./: .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
_docs/: 01-headscale-structure.md  02-target-architecture.md  03-migration-plan.md  04-critical-points.md  05-protocol-reference.md  06-e2e-test.md  project-structure.md
crates/control-api/: Cargo.toml
crates/control-api/src/: events.rs  lib.rs  routing.rs  server.rs
crates/control-core/: Cargo.toml
crates/control-core/src/: lib.rs
crates/control-core/src/auth/: mod.rs
crates/control-core/src/change/: mod.rs
crates/control-core/src/derp/: mod.rs
crates/control-core/src/ipalloc/: mod.rs
crates/control-core/src/mapper/: mod.rs
crates/control-core/src/policy/: mod.rs
crates/control-core/src/server/: mod.rs
crates/control-core/src/state/: mod.rs
crates/control-core/src/store/: document.rs  error.rs  file.rs  memory.rs  mod.rs  traits.rs  types.rs
crates/control-core/tests/: server_smoke.rs
crates/noise/: Cargo.toml
crates/noise/src/: error.rs  framed_io.rs  lib.rs  responder.rs
crates/tailcfg/: Cargo.toml
crates/tailcfg/src/: capver.rs  key_exchange.rs  lib.rs  protocol.rs
crates/tskey/: Cargo.toml
crates/tskey/src/: error.rs  lib.rs
